--- a/client/components/shoutout-form.css
+++ b/client/components/shoutout-form.css
@@ -2,12 +2,13 @@
   text-align: center;
 }
 
-.shoutout-input {
+#form {
   display: flex;
+  text-align: center;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-left: 40px;
+  margin-left: 650px;
   width: 200px;
 }
 
@@ -19,7 +20,6 @@ input {
   align-self: flex-end;
   flex-grow: 1;
   margin-top: 15px;
-  margin-left: 45px;
 }
 
 #message label {
