--- a/client/components/shoutout-form.css
+++ b/client/components/shoutout-form.css
@@ -1,5 +1,12 @@
+#body {
+  display: block;
+}
+
 #emailInfo {
+  display: flex;
+  justify-content: center;
   text-align: center;
+  flex-direction: column;
 }
 
 #form {
@@ -8,8 +15,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-left: 650px;
-  width: 200px;
+}
+
+.shoutout-input {
+  align-self: center;
 }
 
 input {
@@ -17,7 +26,7 @@ input {
 }
 
 #message {
-  align-self: flex-end;
+  align-self: center;
   flex-grow: 1;
   margin-top: 15px;
 }
@@ -28,7 +37,6 @@ input {
 }
 
 #submit {
-  align-self: flex-end;
   align-self: center;
   flex-grow: 4;
   flex-basis: auto;
