--- a/client/components/shoutout-form.css
+++ b/client/components/shoutout-form.css
@@ -1,20 +1,22 @@
-#body {
-  display: block;
+#bodyForm {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 #emailInfo {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  flex-direction: column;
+  margin-bottom: 10px;
 }
 
-#form {
-  display: flex;
-  text-align: center;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+#formSO {
+  margin-top: 10px;
+  width: 350px;
+  margin-bottom: 25px;
+  border: 1px solid black;
+  border-radius: 5px;
+  background-color: #bbe0e3;
 }
 
 .shoutout-input {
