--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,12 @@
 #body {
-  background-color: #c2d6d6;
+  background-color: #56a4a9;
   font-family: 'Oswald', sans-serif;
 }
+/*
+#c2d6d6
 
+#56a4a9
+*/
 #header {
   text-align: center;
 }
