--- a/client/components/shoutout-form.css
+++ b/client/components/shoutout-form.css
@@ -1,5 +1,9 @@
 #bodyForm {
   display: flex;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   justify-content: center;
   text-align: center;
   flex-direction: column;
@@ -8,6 +12,10 @@
 
 #emailInfo {
   display: flex;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
@@ -23,16 +31,28 @@
 }
 
 #noEmails {
+  font-weight: 650;
+  margin-top: 15px;
   height: 40px;
 }
 
 #formSO {
+  display: flex;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
   margin-top: 5px;
   width: 350px;
   margin-bottom: 25px;
   border: 1px solid black;
   border-radius: 5px;
   background-color: #bbe0e3;
+  height: 100%;
 }
 
 .shoutout-input {
@@ -49,21 +69,33 @@
 
 input {
   display: flex;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
 }
 
 #message {
   align-self: center;
-  flex-grow: 1;
+
   margin-top: 15px;
 }
 
 #message label {
   display: flex;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   justify-content: center;
+}
+
+#textarea {
+  align-self: center;
 }
 
 #submit {
   align-self: center;
-  flex-grow: 4;
+
   flex-basis: auto;
 }
