--- a/client/components/shoutoutList.css
+++ b/client/components/shoutoutList.css
@@ -2,10 +2,39 @@
   margin-left: 15px;
 }
 
-#noShoutouts {
-  margin-left: 15px;
+.showOneShoutout {
+  margin-left: 25px;
+  outline: none;
+  color: #ffd24c;
+  outline: none;
+  text-decoration: none;
 }
 
-.link {
-  margin-left: 30px;
+.showOneShoutout:link {
+  color: #ffd24c;
+}
+
+.showOneShoutout:visited {
+  color: #ffd670;
+}
+
+.showOneShoutout:focus {
+  border-bottom: 1px solid;
+  background: #fff30d;
+  border-radius: 5px;
+}
+
+.showOneShoutout:hover {
+  color: #ffd24c;
+  border-bottom: 1px solid;
+  background: #fff30d;
+  border-radius: 5px;
+}
+
+.showOneShoutout:active {
+  color: #ffe136;
+}
+
+#noShoutouts {
+  margin-left: 15px;
 }
