--- a/client/components/email-form.css
+++ b/client/components/email-form.css
@@ -1,4 +1,9 @@
 #addEmail-form {
+  margin-left: 10px;
+  margin-top: 15px;
+  border: 1px solid black;
+  border-radius: 15px;
+  background-color: #81decb;
   width: 450px;
   display: flex;
   flex-direction: row;
